# pico2W_lcd1.3

./: .gitignore  LICENSE  README.md  pico_tips.md  requirements-dev.txt
.github/: copilot-instructions.md
c/: CMakeLists.txt
c/lib/Config/: DEV_Config.c  DEV_Config.h
c/src/: main.c
micropython/: main.py  st7789.py  standalone_main.py
scripts/: copy_to_main.py  setup_venv.sh
supporting_documents/: Pico LCD 1.3 - Waveshare Wiki.html  Pico LCD 1.3 - Waveshare Wiki.webloc
